<resources>
    <string name="app_name">Tasteria</string>
    <string name="Welcome">Thanks for installing Tasteria - Let\'s get you set up!</string>
    <string name="ForgPass">Forgot your password?</string>
    <string name="signUp">Not A Taster? <u>JOIN NOW</u></string>
    <string name="login">Log in</string>
    <string name="password">Password</string>
    <string name="email">Email Address</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="join">Join Tasteria!</string>
    <string name="alreadyMem">Already a Taster? <u>Sign in.</u></string>
    <string name="signPass">Create Password</string>
    <string name="userName">Username</string>
    <string name="signUpButton">Sign Up</string>
    <string name="genderMale">Male</string>
    <string name="genderFemale">Female</string>
    <string name="logInFailed">Failed to log in</string>
    <string name="loginDataProblem">Invalid Email/Password</string>
    <string name="passCharLess">Password must be 8 characters at least</string>
    <string name="invalidMail">Invalid E-Mail form</string>
    <string name="signUpFailed">This Email already exists</string>
    <string name="signUpDataProblem">One or more fields are incorrect</string>
    <string name="invalidForm">Invalid Mail Form</string>
    <string name="invalidUsername">Invalid Username</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="pickAge">Pick up your age</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="backPressExit">Press Back again to exit</string>

    <!-- Main Activity -->
    <string name="nearby">Nearby</string>
    <string name="favorite">Favorite</string>
    <string name="explore">Explore</string>


</resources>
