<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/login_activity_cont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailLay"
            android:layout_width="280dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="192dp"
            android:layout_height="wrap_content"
            android:textColorHint="#FFFFFF"
            android:gravity="center">

        <EditText
            android:id="@+id/userName"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="192dp"
            android:backgroundTint="@color/colorAccent"
            android:drawableLeft="@drawable/ic_mail"
            android:drawableStart="@drawable/ic_mail"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/colorAccent"
            android:theme="@style/editTextColor" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passLay"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/emailLay"
            android:layout_alignStart="@+id/emailLay"
            android:layout_alignTop="@+id/emailLay"
            android:layout_marginTop="64dp"
            android:textColorHint="#FFFFFF"
            android:gravity="center">

        <EditText
            android:id="@+id/password"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/userName"
            android:layout_alignStart="@+id/userName"
            android:layout_alignTop="@+id/userName"
            android:layout_marginTop="64dp"
            android:backgroundTint="@color/colorAccent"
            android:drawableLeft="@drawable/ic_lock"
            android:drawableStart="@drawable/ic_lock"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#FFFFFF"
            android:theme="@style/editTextColor" />
        </android.support.design.widget.TextInputLayout>


        <FrameLayout
            android:id="@+id/buttonFrame"
            android:layout_width="260dp"
            android:layout_height="match_parent"
            android:background="@drawable/login_button"
            android:orientation="vertical"
            android:layout_above="@+id/forgotPassText"
            android:layout_alignLeft="@+id/login"
            android:layout_alignStart="@+id/login"
            android:layout_alignTop="@+id/login">

        </FrameLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="?selectableItemBackground"
            android:text="@string/login"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_below="@+id/passLay"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/forgotPassText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/ForgPass"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/signUpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forgotPassText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:text="@string/signUp"
            android:textColor="@color/colorAccent" />


    </RelativeLayout>
</ScrollView>

